# server/src/middleware/__generated__/swagger.json
@@ -2676,70 +2676,6 @@
 						}
 					}
 				}
-			},
-			"delete": {
-				"operationId": "DeleteCoupon",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [
-					{
-						"jwt": [
-							"admin"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "uid",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			},
-			"post": {
-				"operationId": "AddCoupon",
-				"responses": {
-					"200": {
-						"description": "Coupon Added"
-					}
-				},
-				"description": "Adds a coupon to a user's stripe id.\nRequires an admin JWT token.\nEach user can only have one coupon. The coupon value equals quantity * $40.",
-				"security": [
-					{
-						"jwt": [
-							"admin"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"description": "- The UID of the user to add the coupon to.",
-						"in": "path",
-						"name": "uid",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"description": "- The quantity of coupons to add (multiplied by $40 for total value).",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/AddCouponRequestBody",
-								"description": "- The quantity of coupons to add (multiplied by $40 for total value)."
-							}
-						}
-					}
-				}
 			}
 		},
 		"/admin/bookings/history": {
